<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/main">
    <ScrollView
        style="@style/svStyle">
    <LinearLayout
        style="@style/wrapper">
        <TextView
            style="@style/question"
            android:text="@string/q1"/>
            <EditText
                android:id="@+id/a1"
                style="@style/et"/>
        <TextView
            style="@style/question"
            android:text="@string/q2"/>
        <RelativeLayout
            style="@style/rl">
            <CheckBox
                android:id="@+id/cb1"
                style="@style/cb"
                android:text="@string/a20"/>
            <CheckBox
                android:id="@+id/cb2"
                style="@style/cb"
                android:layout_alignParentRight="true"
                android:text="@string/a21"/>
            <CheckBox
                android:id="@+id/cb3"
                style="@style/cb"
                android:layout_below="@id/cb1"
                android:text="@string/a22"/>
            <CheckBox
                android:id="@+id/cb4"
                style="@style/cb"
                android:layout_below="@id/cb2"
                android:layout_alignParentRight="true"
                android:text="@string/a23"/>
        </RelativeLayout>
        <TextView
            style="@style/question"
            android:text="@string/q3"/>
        <RadioGroup
            android:id="@+id/a3"
            style="@style/rg">
            <RadioButton
                style="@style/rb"
                android:text="@string/a30"/>
            <RadioButton
                style="@style/rb"
                android:text="@string/a31"/>
            <RadioButton
                style="@style/rb"
                android:text="@string/a32"/>
            <RadioButton
                style="@style/rb"
                android:text="@string/a33"/>
        </RadioGroup>
        <TextView
            style="@style/question"
            android:text="@string/q4"/>
        <RadioGroup
            android:id="@+id/a4"
            style="@style/rg">
            <RadioButton
                style="@style/rb"
                android:text="@string/a40"/>
            <RadioButton
                style="@style/rb"
                android:text="@string/a41"/>
            <RadioButton
                style="@style/rb"
                android:text="@string/a42"/>
            <RadioButton
                style="@style/rb"
                android:text="@string/a43"/>
        </RadioGroup>
        <TextView
            style="@style/question"
            android:text="@string/q5"/>
        <EditText
            android:id="@+id/a5"
            style="@style/et"/>
    </LinearLayout>
    </ScrollView>

        <Button
            android:id="@+id/submit"
            style="@style/submit"
            android:text="@string/submit"/>
</LinearLayout>
